--- a/detail_baoyue_disabled2.html
+++ b/detail_baoyue_disabled2.html
@@ -43,11 +43,11 @@
 	        <h2 class="form-signin-heading" align="center">541012010418T（包月）信息</h2>
 	        <div class="span3">
 	        	<h3>剩余天数</h3>
-	        	<p class="text-center text-warning"><strong>0</strong>&nbsp天</p>
+	        	<p class="text-center"><strong>30</strong>&nbsp天</p>
 	        	<h3>账户状态</h3>
-	        	<p class="text-center text-warning"><strong>已停用</strong></p>
-	        	<br>
-	        	<p class="text-warning">需要先充值才能复通帐号</p>
+			<p class="text-center text-warning"><strong>已停用</strong></p>
+			<br>
+			<p class="text-info text-center">请复通帐号</p>
 	        </div>
 	        <div class="span3">
 	        	<h3>充值套餐(25元/月)</h3>
@@ -60,7 +60,7 @@
 	        <div class="row"><h1>&nbsp</h1></div>
 	        <div class="row">
 	        	<button class="btn btn-large span2" disabled type="button">帐号停用</button>
-				<button class="btn btn-large btn-primary span2" disabled  type="button">帐号复通</button>
+				<button class="btn btn-large btn-primary span2" type="button">帐号复通</button>
 				<button class="btn btn-large btn-warning span2" type="button">返回</button>
 	        </div>
 	      </form>
