--- a/Sign in.html
+++ b/Sign in.html
@@ -66,8 +66,8 @@
 	        	</tr>
 	        </table>
 	        <div class="row">
-	        	<button class="btn btn-large btn-primary span3" type="submit">登陆</button>
-	        	<button class="btn btn-large btn-danger span3" type="submit">退出</button>
+	        	<button class="btn btn-large btn-primary span3" onclick="location.href='main_new.html'" type="button">登陆</button>
+	        	<button class="btn btn-large btn-danger span3" onclick="self.close()" type="button">退出</button>
 	        </div>
 	      </form>
     	</div>
