--- a/detail_baoshi.html
+++ b/detail_baoshi.html
@@ -67,7 +67,7 @@
 				<button class="btn btn-large span1" type="button">7</button>
 				<button class="btn btn-large span1" type="button">8</button>
 				<button class="btn btn-large span1" type="button">9</button>
-				<button class="btn btn-large btn-warning span0" type="button">返回</button>
+				<button class="btn btn-large btn-warning span0" type="button" onclick="location.href='main_baoshi.html'">返回</button>
 	        </div>
 	      </form>
     	</div>
