--- a/detail_baoyue_enabled.html
+++ b/detail_baoyue_enabled.html
@@ -57,9 +57,9 @@
 	        <br><br><br>
 	        <div class="row"><h1>&nbsp</h1></div>
 	        <div class="row">
-	        	<button class="btn btn-large  btn-primary span2" type="button">帐号停用</button>
+	        	<button class="btn btn-large  btn-primary span2" type="button" onclick="location.href='detail_baoyue_disabled2.html'">帐号停用</button>
 				<button class="btn btn-large span2" disabled  type="button">帐号复通</button>
-				<button class="btn btn-large btn-warning span2" type="button">返回</button>
+				<button class="btn btn-large btn-warning span2" type="button" onclick="location.href='main_baoyue.html'">返回</button>
 	        </div>
 	      </form>
     	</div>
