--- a/main_baoshi.html
+++ b/main_baoshi.html
@@ -39,11 +39,11 @@
 	        <div class="btn-group" data-toggle="buttons-radio">
 		        <div class="row">
 		        	<h3 class="span3">包月账户（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" >541012010418B</button>
+		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoyue.html'">541012010418B</button>
 		        </div>
 		        <div class="row">
 		        	<h3 class="span3">包时账户（已开通）</h3>
-		        	<button type="button" class="btn btn-primary btn-large span6" >541012010418T</button>
+		        	<button type="button" class="btn btn-primary btn-large span6" onclick="location.href='detail_baoshi.html'">541012010418T</button>
 		        </div>
 		        <hr>
 		        <div class="row">
