--- a/protocol_baoyue.html
+++ b/protocol_baoyue.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 	<head>
 		<meta charset="utf-8">
-		<title>请选择账户类型</title>
+		<title>账户协议</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
@@ -35,20 +35,11 @@
     <body>
     	<div class="container">
 	      <form class="form-signin">
-	        <h2 class="form-signin-heading" align="center">请选择账户类型</h2>
-	        <div class="btn-group" data-toggle="buttons-radio">
-		        <div class="row">
-		        	<h3 class="span3">包月账户（已开通）</h3>
-		        	<button type="button" class="btn btn-primary btn-large span6" onclick="location.href='detail_baoyue_disabled.html'">541012010418B</button>
-		        </div>
-		        <div class="row">
-		        	<h3 class="span3">包时账户（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoshi.html'">541012010418T</button>
-		        </div>
-		        <hr>
-		        <div class="row">
-		        	<button class="btn btn-large btn-danger span6" type="submit">退出</button>
-		        </div>
+	        <h2 class="form-signin-heading" align="center">入网协议</h2>
+	        <p class="lead">截至目前，全球范围仍有40%的桌面和笔记本电脑在使用Windows XP系统。而微软也不止一次提醒用户尽快升级到更新版本的Windows 7或Windows 8以继续获得技术支持。Windows XP最早于2001年10月25日在纽约正式发布。微软于2009年4月结束了对该系统的主流技术支持服务，但其拓展技术支持服务仍可保证用户能继续获得为Windows XP开发的安全更新。不过到了2014年4月，所有关于Windows XP的一切技术支持都将被终止。“用户届时将自行为继续使用该系统的风险负责。”微软表示，“企业用户在升级措施上拖得越久，最后迁移系统的费用也就会越高昂。”</p>
+	        <div class="row">
+	        	<button class="btn btn-large btn-success span3" type="button" onclick="location.href='main_baoyue.html'">同意</button>
+				<button class="btn btn-large btn-warning span3" type="button" onclick="location.href='javascript:history.go(-1);'">不同意</button>
 	        </div>
 	      </form>
     	</div>
