--- a/detail_baoyue_disabled.html
+++ b/detail_baoyue_disabled.html
@@ -51,7 +51,7 @@
 	        </div>
 	        <div class="span3">
 	        	<h3>充值套餐(25元/月)</h3>
-	        	<button class="btn btn-large span2" type="button">一个月</button>
+	        	<button class="btn btn-large span2" type="button" onclick="location.href='detail_baoyue_disabled2.html'">一个月</button>
 				<button class="btn btn-large span2" type="button">两个月</button>
 				<button class="btn btn-large span2" type="button">三个月</button>
 				<button class="btn btn-large span2" type="button">四个月</button>
@@ -61,7 +61,7 @@
 	        <div class="row">
 	        	<button class="btn btn-large span2" disabled type="button">帐号停用</button>
 				<button class="btn btn-large btn-primary span2" disabled  type="button">帐号复通</button>
-				<button class="btn btn-large btn-warning span2" type="button">返回</button>
+				<button class="btn btn-large btn-warning span2" type="button" onclick="location.href='main_baoyue.html'">返回</button>
 	        </div>
 	      </form>
     	</div>
