--- a/detail_baoyue_enabled.html
+++ b/detail_baoyue_enabled.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 	<head>
 		<meta charset="utf-8">
-		<title>包月账户户信息</title>
+		<title>包月账户信息</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
@@ -42,27 +42,47 @@
 	      <form class="form-signin">
 	        <h2 class="form-signin-heading" align="center">541012010418T（包月）信息</h2>
 	        <div class="span3">
-	        	<h3>剩余天数</h3>
-	        	<p class="text-center"><strong>5</strong>&nbsp天</p>
 	        	<h3>账户状态</h3>
-	        	<p class="text-center"><strong>使用中</strong></p>
+	        	<br><br><br>
+	        	<p class="text-center text-success"><strong>使用中</strong></p>
 	        </div>
 	        <div class="span3">
 	        	<h3>充值套餐(25元/月)</h3>
-	        	<button class="btn btn-large span2" type="button">一个月</button>
-				<button class="btn btn-large span2" type="button">两个月</button>
-				<button class="btn btn-large span2" type="button">三个月</button>
-				<button class="btn btn-large span2" type="button">四个月</button>
+	        	<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">一个月</a>
+				<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">两个月</a>
+				<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">三个月</a>
+				<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">四个月</a>
 	        </div>
 	        <br><br><br>
 	        <div class="row"><h1>&nbsp</h1></div>
-	        <div class="row">
-	        	<button class="btn btn-large  btn-primary span2" type="button" onclick="location.href='detail_baoyue_disabled2.html'">帐号停用</button>
-				<button class="btn btn-large span2" disabled  type="button">帐号复通</button>
-				<button class="btn btn-large btn-warning span2" type="button" onclick="location.href='main_baoyue.html'">返回</button>
+	        <div class="row-fluid">
+	        	<a href="#stop" role="button" data-toggle="modal" class="btn btn-large  btn-primary span6" type="button">帐号停用</a>
+				<button class="btn btn-large btn-warning span6" type="button" onclick="location.href='main_baoyue.html'">返回</button>
 	        </div>
 	      </form>
     	</div>
+    	<div id="charge" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-header">
+		    <h3 id="myModalLabel" class="text-success" align="center">充值成功！</h3>
+		  </div>
+		  <div class="modal-body" align="center">
+		  	<div class="row-fluid">
+		    	<button class="btn btn-primary btn-large span6" onclick="location.href='detail_baoyue_enabled.html'" >返回</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    </div>
+		  </div>
+		</div>
+		<div id="stop" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-header">
+		    <h3 id="myModalLabel" class="text-success" align="center">操作成功！</h3>
+		  </div>
+		  <div class="modal-body" align="center">
+		  	<div class="row-fluid">
+		    	<button class="btn btn-primary btn-large span6" onclick="location.href='detail_baoyue_disabled2.html'" >返回</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    </div>
+		  </div>
+		</div>
     	<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
     </body>
