--- a/errors/Sign in_exception.html
+++ b/errors/Sign in_exception.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
-		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="../css/bootstrap.css" rel="stylesheet">
 		<style type="text/css">
 	      body {
 	        padding-top: 40px;
@@ -42,7 +42,11 @@
     	<div class="container">
 	      <form class="form-signin">
 	        <h2 class="form-signin-heading" align="center">齐鹏&nbsp你好</h2>
-	        <input type="password" class="input-block-level" placeholder="请输入密码登陆">
+	        <div class="control-group error">
+			  <div class="controls">
+			    <input id="inputError" type="password" class="input-block-level" placeholder="密码错误，请重新输入">
+			  </div>
+			</div>
 	        <table class="table">
 	        	<tr>
 	        		<td><button class="btn btn-large btn-block" type="button">7</button></td>
@@ -66,12 +70,12 @@
 	        	</tr>
 	        </table>
 	        <div class="row-fluid">
-	        	<button class="btn btn-large btn-primary span6" onclick="location.href='main_new.html'" type="button">登陆</button>
+	        	<button class="btn btn-large btn-primary span6" onclick="location.href=''" type="button">登陆</button>
 	        	<button class="btn btn-large btn-danger span6" onclick="self.close()" type="button">退出</button>
 	        </div>
 	      </form>
     	</div>
-    	<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+    	<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
