--- a/errors/detail_baoshi_exception.html
+++ b/errors/detail_baoshi_exception.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
-		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="../css/bootstrap.css" rel="stylesheet">
 		<style type="text/css">
 	      body {
 	        padding-top: 40px;
@@ -67,22 +67,23 @@
 				<button class="btn btn-large span1" type="button">7</button>
 				<button class="btn btn-large span1" type="button">8</button>
 				<button class="btn btn-large span1" type="button">9</button>
-				<button class="btn btn-large btn-warning span0" type="button" onclick="location.href='main_baoshi.html'">返回</button>
+				<button class="btn btn-large btn-warning span0" type="button" onclick="location.href='../main_baoshi.html'">返回</button>
 	        </div>
 	      </form>
     	</div>
     	<div id="agree" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		  <div class="modal-header">
-		    <h3 id="myModalLabel" class="text-success" align="center">充值成功！</h3>
+		    <h3 id="myModalLabel" class="text-error" align="center">充值失败！</h3>
 		  </div>
 		  <div class="modal-body" align="center">
+		  	<p class="text-error">您的账户余额不足！</p>
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
 		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
 		    </div>
 		  </div>
 		</div>
-    	<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+    	<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
