--- a/errors/protocol_error.html
+++ b/errors/protocol_error.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
-		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="../css/bootstrap.css" rel="stylesheet">
 		<style type="text/css">
 	      body {
 	        padding-top: 40px;
@@ -36,22 +36,22 @@
     	<div class="container">
 	      <form class="form-signin">
 	        <h2 class="form-signin-heading" align="center">入网协议</h2>
-	        <p class="lead">截至目前，全球范围仍有40%的桌面和笔记本电脑在使用Windows XP系统。而微软也不止一次提醒用户尽快升级到更新版本的Windows 7或Windows 8以继续获得技术支持。Windows XP最早于2001年10月25日在纽约正式发布。微软于2009年4月结束了对该系统的主流技术支持服务，但其拓展技术支持服务仍可保证用户能继续获得为Windows XP开发的安全更新。不过到了2014年4月，所有关于Windows XP的一切技术支持都将被终止。“用户届时将自行为继续使用该系统的风险负责。”微软表示，“企业用户在升级措施上拖得越久，最后迁移系统的费用也就会越高昂。”</p>
+	        <p class="lead">截至目前，全球范围仍有40%的桌面和笔记本电脑在使用Windows XP系统。而微软也不止一次提醒用户尽快升级到更新版本的Windows 7或Windows 8以继续获得技术支持。Windows XP最早于2001年10月25日在纽约正式发布。微软于2009年4月结束了对该系统的主流技术支    	持服务，但其拓展技术支持服务仍可保证用户能继续获得为Windows XP开发的安全更新。不过到了2014年4月，所有关于Windows XP的一切技术支持都将被终止。“用户届时将自行为继续使用该系统的风险负责。”微软表示，“企业用户在升级措施上拖得越久，最后迁移系统的费用也就会越高昂。”</p>
 	        <div class="row">
-	        	<a href="#agree" role="button" data-toggle="modal" class="btn btn-large btn-success span3" type="button" >同意</a>
+	        	<a href="#agree" role="button" data-toggle="modal" class="btn btn-large btn-success span3" type="button">同意</a>
 				<button class="btn btn-large btn-warning span3" type="button" onclick="location.href='javascript:history.go(-1);'">不同意</button>
 	        </div>
 	      </form>
     	</div>
     	<div id="agree" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		  <div class="modal-header">
-		    <h3 id="myModalLabel" class="text-success" align="center">开户成功！</h3>
+		    <h3 id="myModalLabel" class="text-error" align="center">开户失败！</h3>
 		  </div>
 		  <div class="modal-body" align="center">
-		    <button class="btn btn-primary btn-large btn-block" onclick="location.href='detail_baoshi.html'" >充值</button>
+		    <button class="btn btn-danger btn-large btn-block" onclick="location.href=''" >返回</button>
 		  </div>
 		</div>
-    	<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
