--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-My Github Page
+<!DOCTYPE html>
+<html lang="zh">
+  <head>
+    <meta charset="utf-8">
+    <title>ZZULI Network Self Service Terminal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
+
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        margin: 60px 0;
+        text-align: center;
+      }
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
+      }
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
+      }
+
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
+    </style>
+  </head>
+
+  <body>
+
+    <div class="container-narrow">
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="muted">ZZULI Network Self Service Terminal</h3>
+      </div>
+
+      <hr>
+
+      <div class="jumbotron">
+        <h1>ZZULI Network Self Service Terminal</h1>
+        <p class="lead">With this app on the terminal in campus, you can easily help yourself to recharge your account of campus network.</p>
+        <a class="btn btn-large btn-success" href="Sign in.html">Try Now!</a>
+      </div>
+
+      <hr>
+
+      <div class="row-fluid marketing">
+        <div class="row-fluid">
+          <h4>Normal Use Case</h4>
+          <p>Correct operation will act like this.</p>
+          <a class="btn btn-primary" href="Sign in.html">Try it</a>
+          <h4>Exception Use Case</h4>
+          <p>Here are some exceptions users may cause.</p>
+          <a class="btn btn-primary" href="errors/Sign in_exception.html">Sign in Error</a>
+          <a class="btn btn-primary" href="errors/Sign in_exception.html">Take Time Account Error</a>
+          <a class="btn btn-primary" href="errors/Sign in_exception.html">Monthly Account Error</a>
+          <a class="btn btn-primary" href="errors/Sign in_exception.html">Protocol Error</a>
+        </div>
+
+      <hr>
+
+      <div class="footer">
+        <p>&copy; IT Studio(Dongfeng Campus)@ZZULI 2013</p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+  </body>
+</html>
