--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
           <h4>Exception Use Case</h4>
           <p>Here are some exceptions users may cause.</p>
           <a class="btn btn-primary" href="errors/Sign in_exception.html">Sign in Error</a>
-          <a class="btn btn-primary" href="errors/Sign in_exception.html">Take Time Account Error</a>
-          <a class="btn btn-primary" href="errors/Sign in_exception.html">Monthly Account Error</a>
-          <a class="btn btn-primary" href="errors/Sign in_exception.html">Protocol Error</a>
+          <a class="btn btn-primary" href="errors/detail_baoshi_exception.html">Take Time Account Error</a>
+          <a class="btn btn-primary" href="errors/detail_baoyue_charge_exception.html">Monthly Account Error</a>
+          <a class="btn btn-primary" href="errors/protocol_error.html">Protocol Error</a>
         </div>
 
       <hr>
