--- a/detail_baoshi.html
+++ b/detail_baoshi.html
@@ -78,7 +78,7 @@
 		  <div class="modal-body" align="center">
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
