--- a/detail_baoyue_enabled.html
+++ b/detail_baoyue_enabled.html
@@ -68,7 +68,7 @@
 		  <div class="modal-body" align="center">
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href='detail_baoyue_enabled.html'" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
@@ -79,7 +79,7 @@
 		  <div class="modal-body" align="center">
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href='detail_baoyue_disabled2.html'" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
