--- a/errors/detail_baoshi_exception.html
+++ b/errors/detail_baoshi_exception.html
@@ -79,7 +79,7 @@
 		  	<p class="text-error">您的账户余额不足！</p>
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="self.close()" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
