--- a/main_baoyue.html
+++ b/main_baoyue.html
@@ -47,7 +47,7 @@
 		        </div>
 		        <hr>
 		        <div class="row">
-		        	<button class="btn btn-large btn-danger span6" type="submit" onclick="self.close()">退出</button>
+		        	<button class="btn btn-large btn-danger span6" type="submit" onclick="location.href='index.html'">退出</button>
 		        </div>
 	        </div>
 	      </form>
