--- a/Sign in.html
+++ b/Sign in.html
@@ -67,7 +67,7 @@
 	        </table>
 	        <div class="row-fluid">
 	        	<button class="btn btn-large btn-primary span6" onclick="location.href='main_new.html'" type="button">登陆</button>
-	        	<button class="btn btn-large btn-danger span6" onclick="self.close()" type="button">退出</button>
+	        	<button class="btn btn-large btn-danger span6" onclick="location.href='index.html'" type="button">退出</button>
 	        </div>
 	      </form>
     	</div>
