--- a/detail_baoyue_disabled2.html
+++ b/detail_baoyue_disabled2.html
@@ -49,7 +49,7 @@
 				<p class="text-info text-center"><strong>请复通帐号</strong></p>
 	        </div>
 	        <div class="span3">
-	        	<h3>充值套餐(25元/月)</h3>
+	        	<h3>资费标准：25元/月</h3>
 	        	<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">一个月</a>
 				<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">两个月</a>
 				<a href="#charge" role="button" data-toggle="modal" class="btn btn-large span2" type="button">三个月</a>
