--- a/errors/detail_baoyue_charge_exception.html
+++ b/errors/detail_baoyue_charge_exception.html
@@ -47,7 +47,7 @@
 	        	<p class="text-center text-warning"><strong>已停用</strong></p>
 	        </div>
 	        <div class="span3">
-	        	<h3>充值套餐(25元/月)</h3>
+	        	<h3>资费标准：25元/月</h3>
 	        	<a href="#fail1" role="button" data-toggle="modal" class="btn btn-large span2" type="button">一个月</a>
 				<a href="#fail2" role="button" data-toggle="modal" class="btn btn-large span2" type="button">两个月</a>
 				<a href="#fail3" role="button" data-toggle="modal" class="btn btn-large span2" type="button">三个月</a>
