--- a/errors/detail_baoshi_exception.html
+++ b/errors/detail_baoshi_exception.html
@@ -49,16 +49,18 @@
 	        <h3>剩余金额</h3>
 	        <p class="text-center"><strong>2.5</strong>&nbsp元</p>
 	        <hr>
-	        <h3 class="form-signin-heading" align="center">
-	        	<input name="time" class="input-mini" type="text" placeholder="时间">小时 * 0.5元/小时 = XX元
-	        </h3>
+	        <p class="form-signin-heading">
+	        	<form class="form-inline">
+	        		<input name="time" class="input-mini" type="text" placeholder="时间">小时 * 0.5元/小时 = XX元
+	        		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+	        		<a href="#agree" role="button" data-toggle="modal" class="btn btn-large btn-success" type="submit" >充值</a>
 	        <div class="row">
 	        	<button class="btn btn-large span1" type="button">0</button>
 				<button class="btn btn-large span1" type="button">1</button>
 				<button class="btn btn-large span1" type="button">2</button>
 				<button class="btn btn-large span1" type="button">3</button>
 				<button class="btn btn-large span1" type="button">4</button>
-				<a href="#agree" role="button" data-toggle="modal" class="btn btn-large btn-success span0" type="submit" >充值</a>
+				<button class="btn btn-warning btn-large span1" type="button" onclick="descText()">←</button>
 	        </div>
 	        <br>
 	        <div class="row">
@@ -83,6 +85,13 @@
 		    </div>
 		  </div>
 		</div>
+		<script type="text/javascript">
+    		function inputText() {}
+    		function descText() {
+    			var str = document.getElementsByName("time")[0].value;
+    			document.getElementsByName("time")[0].value = str.substring(0, str.length - 1);
+    		}
+    	</script>
     	<script src="../js/jquery.min.js"></script>
 		<script src="../js/bootstrap.min.js"></script>
     </body>
