--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">ZZULI Network Self Service Terminal</h3>
+        <h3 class="muted">ZZULI METC</h3>
       </div>
 
       <hr>
@@ -78,10 +78,10 @@
           <a class="btn btn-primary" href="Sign in.html">Try it</a>
           <h4>Exception Use Case</h4>
           <p>Here are some exceptions users may cause.</p>
-          <a class="btn btn-primary" href="errors/Sign in_exception.html">Sign in Error</a>
-          <a class="btn btn-primary" href="errors/detail_baoshi_exception.html">Take Time Account Error</a>
-          <a class="btn btn-primary" href="errors/detail_baoyue_charge_exception.html">Monthly Account Error</a>
-          <a class="btn btn-primary" href="errors/protocol_error.html">Protocol Error</a>
+          <a class="btn" href="errors/Sign in_exception.html">Sign in Error</a>
+          <a class="btn" href="errors/detail_baoshi_exception.html">Take Time Account Error</a>
+          <a class="btn" href="errors/detail_baoyue_charge_exception.html">Monthly Account Error</a>
+          <a class="btn" href="errors/protocol_error.html">Protocol Error</a>
         </div>
 
       <hr>
