--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row-fluid">
           <h4>Normal Use Case</h4>
           <p>Correct operation will act like this.</p>
-          <a class="btn btn-primary" href="Sign in.html">Try it</a>
+          <a class="btn" href="Sign in.html">Try it</a>
           <h4>Exception Use Case</h4>
           <p>Here are some exceptions users may cause.</p>
           <a class="btn" href="errors/Sign in_exception.html">Sign in Error</a>
