change sign in style

--- a/Sign in.html
+++ b/Sign in.html
@@ -43,28 +43,30 @@
 	      <form class="form-signin">
 	        <h2 class="form-signin-heading" align="center">刘朋&nbsp你好</h2>
 	        <input type="password" name="password" class="input-block-level" placeholder="请输入密码登陆">
-	        <table class="table">
-	        	<tr>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">7</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">8</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">9</button></td>
-	        	</tr>
-	        	<tr>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">4</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">5</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">6</button></td>
-	        	</tr>
-	        	<tr>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">1</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">2</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">3</button></td>
-	        	</tr>
-	        	<tr>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">X</button></td>
-	        		<td><button class="btn btn-large btn-block" type="button" onclick="inputText()">0</button></td>
-	        		<td><button class="btn btn-warning btn-large btn-block" type="button" onclick="descText()">←</button></td>
-	        	</tr>
-	        </table>
+	        <div class="row-fluid">
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">7</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">8</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">9</button>
+	        </div>
+	        <br>
+	        <div class="row-fluid">
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">4</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">5</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">6</button>
+	        </div>
+	        <br>
+	        <div class="row-fluid">
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">1</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">2</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">3</button>
+	        </div>
+	        <br>
+	        <div class="row-fluid">
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">X</button>
+		        <button class="btn btn-large span4" type="button" onclick="inputText()">0</button>
+		        <button class="btn btn-warning btn-large span4" type="button" onclick="descText()">←</button>
+	        </div>
+	        <br>
 	        <div class="row-fluid">
 	        	<button class="btn btn-large btn-primary span6" onclick="location.href='main_new.html'" type="button">登陆</button>
 	        	<button class="btn btn-large btn-danger span6" onclick="location.href='index.html'" type="button">退出</button>
