add teachers and postgraduates' free accoumt use case

--- a/main_baoshi.html
+++ b/main_baoshi.html
@@ -39,11 +39,11 @@
 	        <div class="btn-group" data-toggle="buttons-radio">
 		        <div class="row">
 		        	<h3 class="span3">包月账户541012010418B（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoyue.html'">开户/缴费</button>
+		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoyue.html'">开户/缴费/复通</button>
 		        </div>
 		        <div class="row">
 		        	<h3 class="span3">包时账户541012010418T（已开通）</h3>
-		        	<button type="button" class="btn btn-primary btn-large span6" onclick="location.href='detail_baoshi.html'">开户/缴费/复通</button>
+		        	<button type="button" class="btn btn-primary btn-large span6" onclick="location.href='detail_baoshi.html'">开户/缴费</button>
 		        </div>
 		        <hr>
 		        <div class="row">
