--- a/detail_post.html
+++ b/detail_post.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 	<head>
 		<meta charset="utf-8">
-		<title>请选择开户类型</title>
+		<title>免费账户信息</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="HCI">
 		<meta name="author" content="PengEdy">
@@ -13,7 +13,6 @@
 	        padding-bottom: 40px;
 	        background-color: #f5f5f5;
 	      }
-
 	      .form-signin {
 	        max-width: 500px;
 	        padding: 19px 29px 29px;
@@ -30,26 +29,21 @@
 	      .form-signin .form-signin-heading{
 	        margin-bottom: 10px;
 	      }
+	      p{
+	      	font-size: 20px;
+	      }
       	</style>
     </head>
     <body>
     	<div class="container">
 	      <form class="form-signin">
-	        <h2 class="form-signin-heading" align="center">请选择开户类型</h2>
-	        <div class="btn-group" data-toggle="buttons-radio">
-		        <div class="row">
-		        	<h3 class="span3">包月账户541012010418B（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoyue.html'">开户/缴费/复通</button>
-		        </div>
-		        <div class="row">
-		        	<h3 class="span3">包时账户541012010418T（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoshi.html'">开户/缴费</button>
-		        </div>
-		        <hr>
-		        <div class="row">
-		        	<button class="btn btn-large btn-danger span6" type="button" onclick="self.close()">退出</button>
-		        </div>
-	        </div>
+	        <h2 class="form-signin-heading" align="center">541012010400P（免费）信息</h2>
+	        <h3>账户状态</h3>
+	        <p class="text-center text-success"><strong>使用中</strong></p>
+	        <hr>
+	        <form class="form-inline">
+        		<button class="btn btn-large btn-danger btn-block" type="button" onclick="self.close()">退出</button>
+	        </form>
 	      </form>
     	</div>
     	<script src="js/jquery.min.js"></script>
