--- a/main_post.html
+++ b/main_post.html
@@ -38,12 +38,8 @@
 	        <h2 class="form-signin-heading" align="center">请选择开户类型</h2>
 	        <div class="btn-group" data-toggle="buttons-radio">
 		        <div class="row">
-		        	<h3 class="span3">包月账户541012010400B（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoyue.html'">开户/缴费/复通</button>
-		        </div>
-		        <div class="row">
-		        	<h3 class="span3">包时账户541012010400T（未开通）</h3>
-		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_baoshi.html'">开户/缴费</button>
+		        	<h3 class="span3">免费账户541012010400P（未开通）</h3>
+		        	<button type="button" class="btn btn-large span6" onclick="location.href='protocol_post.html'">开户</button>
 		        </div>
 		        <hr>
 		        <div class="row">
