--- a/errors/detail_baoyue_charge_exception.html
+++ b/errors/detail_baoyue_charge_exception.html
@@ -69,7 +69,7 @@
 		  	<p class="text-error">您的账户余额不足！</p>
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='../index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
@@ -80,7 +80,7 @@
 		  <div class="modal-body" align="center">
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='../index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
@@ -92,7 +92,7 @@
 		  	<p class="text-error">请重试</p>
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='../index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
@@ -104,7 +104,7 @@
 		  	<p class="text-error">请稍后再试</p>
 		  	<div class="row-fluid">
 		    	<button class="btn btn-primary btn-large span6" onclick="location.href=''" >返回</button>
-		    	<button class="btn btn-danger btn-large span6" onclick="location.href='index.html'" >退出</button>
+		    	<button class="btn btn-danger btn-large span6" onclick="location.href='../index.html'" >退出</button>
 		    </div>
 		  </div>
 		</div>
